# engine

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
android/: CMakeLists.txt
include/: AnimatedSprite.h  Button.h  Constants.h  EventManager.h  EventParameter.h  EventSubscriber.h  EventSystem.h  FontManager.h  GameCamera.h  GameObject.h  IIdentifiable.h  IInputReceiver.h  Key.h  KeyEventParameters.h  KeyState.h  Log.h  Rect.h  Scene.h  SceneLoader.h  SceneMainMenu.h  SceneManager.h  SceneObject.h  SceneObjectFactory.h  Shader.h  ShaderManager.h  Sprite.h  SpriteFactory.h  SystemBase.h  TextObject.h  TextObjectFactory.h  TextureManager.h  TextureSet.h  Vector2.h
include/android/: System.h  SystemAndroid.h
include/desktop/: System.h  SystemDesktop.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: AnimatedSprite.cpp  Button.cpp  EventManager.cpp  EventSubscriber.cpp  EventSystem.cpp  FontManager.cpp  GameCamera.cpp  GameObject.cpp  Log.cpp  Rect.cpp  Scene.cpp  SceneLoader.cpp  SceneMainMenu.cpp  SceneManager.cpp  SceneObject.cpp  SceneObjectFactory.cpp  Shader.cpp  ShaderManager.cpp  Sprite.cpp  SpriteFactory.cpp  SystemBase.cpp  TextObject.cpp  TextObjectFactory.cpp  TextureManager.cpp  TextureSet.cpp
src/android/: System.cpp  SystemAndroid.cpp  main_android.cpp
src/desktop/: System.cpp  SystemDesktop.cpp
